--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ canvas {
   z-index: 0;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, calc(-50% - 20px));
+  transform: translate(-50%, calc(-50% - 60px));
   height: 70vh !important;
   width: 70vh !important;
 }
@@ -33,7 +33,7 @@ video {
   left: 50%;
   width: 70vh;
   justify-content: space-between;
-  transform: translate(-50%, 35vh);
+  transform: translate(-50%, 30vh);
 }
 
 #capture_btn {
@@ -42,6 +42,20 @@ video {
   background-image: url('./camera_icon.png');
   cursor: pointer;
   image-rendering: pixelated;
+  align-items: center;
+}
+
+#github {
+  display: block;
+  position: absolute;
+  z-index: 0;
+  bottom: 20px;
+  left: 50%;
+  justify-content: space-between;
+  transform: translate(-50%, 0);
+  color: #FFF;
+  width: 100vw;
+  text-align: center;
 }
 
 .palette_change {
@@ -63,6 +77,7 @@ video {
   cursor: pointer;
   image-rendering: pixelated;
 }
+
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 
