--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ canvas {
   z-index: 0;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, calc(-50% - 60px));
+  transform: translate(-50%, calc(-50% - 6vh));
   height: 70vh !important;
   width: 70vh !important;
 }
